- 
    Bug 
- 
    Resolution: Fixed
- 
    P1: Critical 
- 
    6.5.1
- 
    None
- 
        
- 
        551cbc5b1 (dev), 7c3222028 (6.6), 9435d8b2c (6.5), 81e427894 (dev), 31a336d35 (6.6), 51af3cc20 (6.5)
Regression from 6.5.0.
Run an app (i.e. quick controls example), switch light to dark (or vise versa) in Settings, observe incorrect colors in some controls. For example, text color in MenuItem, ComboBox, TextField, maybe more.
- relates to
- 
                    QTBUG-113169 QStyleHints::colorScheme reports incorrect value and breaks app palette -         
- Closed
 
-         
- 
                    QTBUG-114191 [Dialog QML] Dialog becomes dark after putting the app in the background and resuming it back with iOS style -         
- Closed
 
-